--- a/spring-data-jpa/pom.xml
+++ b/spring-data-jpa/pom.xml
@@ -2,17 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>darkhorse297-jpa</artifactId>
+        <groupId>org.example</groupId>
+        <version>1.0.0</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>darkhorse297-jpa</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0.0</version>
-    <modules>
-        <module>common-jpa</module>
-        <module>spring-data-jpa</module>
-    </modules>
-
+    <artifactId>spring-data-jpa</artifactId>
+    <packaging>jar</packaging>
 
 
 </project>
