--- a/spring-data-jpa/pom.xml
+++ b/spring-data-jpa/pom.xml
@@ -11,6 +11,18 @@
 
     <artifactId>spring-data-jpa</artifactId>
     <packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <spring.version>4.2.4.RELEASE</spring.version>
